<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/playlist_background"
    android:id="@+id/fragment_playlist_layout1"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/fragment_playlist_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/playlist_contents_layout"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1">
                <ImageView
                    android:id="@+id/back_arrow_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_button"/>
                <TextView
                    android:id="@+id/playlist_name_playlist_fragment"
                    android:text=""
                    android:textColor="@android:color/background_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/playlist_settings_button"
                    android:padding="16dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/more_options"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/share_button"
                    android:layout_width="34dp"
                    android:layout_height="31dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/like_playlist"
                    android:src="@drawable/share_icon" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/like_playlist"
                    android:padding="16dp"
                    android:src="@drawable/favorite_border"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/fragment_playlist_layout3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9">
                <LinearLayout
                    android:id="@+id/fragment_playlist_layout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ScrollView
                        android:id="@+id/fragment_playlist_layout5"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:fillViewport="true">
                        <LinearLayout
                            android:id="@+id/fragment_playlist_layout6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/playlist_image_playlist_fragment"
                                android:layout_width="250dp"
                                android:layout_height="250dp"
                                android:scaleType="centerCrop"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:src = "@drawable/default_image"
                                android:layout_marginBottom="20dp"/>
                            <TextView
                                android:id="@+id/playlist_name_middle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/background_light"
                                android:text="playList Name"
                                android:gravity="center"/>
                            <TextView
                                android:id="@+id/playlist_owner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_gravity="center"
                                android:textSize="14dp"
                                android:textColor="@android:color/darker_gray"
                                android:text="BY SPOTIFY"
                                android:textAllCaps="true"
                                android:gravity="center"/>
                            <Button
                                android:id="@+id/shuffle_play_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_button"
                                android:text="shuffle play"
                                android:paddingLeft="40dp"
                                android:paddingRight="40dp"
                                android:textSize="18dp"
                                android:textAllCaps="true"
                                android:layout_marginTop="8dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@android:color/background_light"/>
                            <Button
                                android:id="@+id/preview_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/transparent_rounded_button"
                                android:text="preview"
                                android:paddingLeft="25dp"
                                android:paddingRight="25dp"
                                android:textSize="14dp"
                                android:layout_marginTop="32dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@android:color/background_light"/>
                            <TextView
                                android:id="@+id/artist_name_song_name_playlist"
                                android:gravity="center"
                                android:layout_margin="16dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/background_light"
                                android:text="artist name.song name"/>


                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progress_bar_playlist"/>
        <LinearLayout
            android:id="@+id/something_wrong_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:visibility="gone">
            <TextView
                android:id="@+id/something_wrong_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:text="something went wrong"
                android:gravity="center"/>
            <Button
                android:id="@+id/something_wrong_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_rounded_button"
                android:text="Try Again"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textSize="14dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/background_light"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>