...
    <RelativeLayout
        android:id="@+id/activity_playlist_preview_layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <ImageView
            android:id="@+id/back_arrow_from_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_button"/>
        <TextView
...
