...
    android:orientation="horizontal"
    android:id="@+id/bottom_layout"
    android:layout_width="match_parent"
    android:background="#191414"
    android:layout_height="68dp">
    <ImageView
        android:id="@+id/bottom_image_id"
        android:scaleType="centerCrop"
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:src="@drawable/default_image"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"/>
...
